--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@sentry/nextjs": "^10.27.0",
+    "@stripe/stripe-js": "^8.6.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
@@ -32,6 +33,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
@@ -42,7 +44,17 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "autoprefixer": "^10.4.22",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.10"
-  }
+  },
+  "main": "playwright.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
